--- a/pull-to-load-api/.gitignore
+++ b/pull-to-load-api/.gitignore
@@ -1,3 +1,5 @@
+/build
+### Android template
 # Built application files
 *.apk
 *.ap_
@@ -33,8 +35,8 @@ proguard/
 captures/
 
 # Intellij
-*.iml/
-.idea/
+*.iml
+.idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
@@ -53,3 +55,4 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
