--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile project(':pull-to-load-api')
-//    compile 'com.zxy.android:pull-to-load:0.0.1'
+//    compile project(':pull-to-load-api')
+    compile 'com.zxy.android:pull-to-load:1.0.0'
 }
